plugins {
    id 'java'
}

def pluginMainClass = 'app.mettle.runelite.MettleSyncPluginTest'

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.runelite.net'
        content {
            includeGroupByRegex('net\\.runelite.*')
        }
    }
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
    compileOnly "net.runelite:client:${runeLiteVersion}"
    compileOnly "javax.inject:javax.inject:1"
    testImplementation "junit:junit:4.12"
    testImplementation "net.runelite:client:${runeLiteVersion}"
    testImplementation "net.runelite:jshell:${runeLiteVersion}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(11)
}

tasks.named('test') {
    failOnNoDiscoveredTests = false
}

tasks.register('run', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = pluginMainClass
    jvmArgs '-ea', '--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED'
    args '--developer-mode', '--debug'
}

tasks.register('shadowJar', Jar) {
    dependsOn configurations.testRuntimeClasspath

    manifest {
        attributes(
            'Main-Class': pluginMainClass,
            'Multi-Release': true
        )
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from sourceSets.main.output
    from sourceSets.test.output
    from {
        configurations.testRuntimeClasspath.collect { file ->
            file.isDirectory() ? file : zipTree(file)
        }
    }

    exclude 'META-INF/INDEX.LIST'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude '**/module-info.class'

    group = 'build'
    archiveClassifier.set('shadow')
    archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}
